--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,10 @@ jobs:
         run: npm install
 
       - name: Create .env
-        run: echo "DATABASE_URL='file:./dev.db'" > .env
+        run: echo "DATABASE_URL=file:./dev.db" > .env
       
       - name: Include secret key
-        run: echo "SECRET_KEY='YOUR SECRET KEY'" >> .env
+        run: echo "SECRET_KEY=YOUR_SECRET_KEY" >> .env
 
       - name: Create prisma client
         run: npx prisma generate
