--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mimetype": "^0.0.8",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
   },
